--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ test = [
     "testcontainers>=4.13.2",
 ]
 
+[tool.pytest.ini_options]
+pythonpath = ["."]
+
 [tool.uv]
 python-preference = "managed"
 cache-dir = ".uv_cache"
