--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "uvicorn==0.38.0",
     "pydantic==2.12.4",
     "httpx==0.28.1",
+    "pyyaml>=6.0.3",
 ]
 
 [project.optional-dependencies]
